# vectorized-execution-engine

./: .gitignore  README.md  pyproject.toml
src/vectorized_execution_engine/: __main__.py  aggregate.py  batch.py  distinct.py  errors.py  expressions.py  joins.py  models.py  operators.py  pipeline.py  protocols.py  sort.py
tests/: naive_reference.py  test_aggregate.py  test_batch.py  test_distinct.py  test_expressions.py  test_joins.py  test_memory_limits.py  test_operators.py  test_pipeline.py  test_properties.py  test_sort_limit.py
