[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectorized-execution-engine"
version = "0.1.0"
description = "A vectorized, batch-oriented query execution engine with NumPy-accelerated relational operators."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Juan Martos Cuevas", email = "martoscuevasjuan@gmail.com" }]
dependencies = ["numpy>=1.26"]

[project.urls]
Repository = "https://github.com/juanmmm21/vectorized-execution-engine"

[project.scripts]
vectorized-execution-engine = "vectorized_execution_engine.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.10", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/vectorized_execution_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
